# ai-adwords

./: .amp-permissions.json  .coverage  .dockerignore  .env.example  .env.template  .gitignore  AGENTS.md  AGENT_SYSTEM_GUIDE.md  CAMPAIGN_CONSOLIDATION_IMPLEMENTATION.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DUAL_PRODUCT_CAMPAIGN_STRUCTURE.md  Dockerfile  LINKEDIN_SETUP_INSTRUCTIONS.md  MANUAL_OPTIMIZATION_GUIDE.md  MULTI_PLATFORM_BIGQUERY_SETUP.md  Makefile  PLATFORM_README.md  Procfile  QUICK_DEPLOY.md  RAILWAY_DEPLOYMENT_GUIDE.md  README.md  REAL_DATA_INTEGRATION.md  REAL_DATA_STATUS.md  analyze_daily_spend.py  analyze_sourcegraph.py  app_safe.py  audit_bigquery_data.py  check_account_access.py  check_data_transfer_status.py  check_google_ads_config.py  check_synter_analytics.py  check_table_updates.py  conversion_validation_setup.md  debug_app.py  debug_google_ads_data.py  deploy.sh  deploy_railway.sh  docker-compose.yml  (+45 more)
.streamlit/: config.toml  secrets.toml
docs/: ACCEPTANCE.md  DEPLOY_STREAMLIT.md  GOOGLE_ADS_API_APPROVAL_DESIGN.html  GOOGLE_ADS_API_APPROVAL_DESIGN.md  GOOGLE_ADS_APP_SPEC.md
scripts/: analyze_account.py  get_refresh_token.py  sync_ads_to_bq.py
src/: __init__.py  cli.py  cli_agents.py  db_init.py
src/ads/: __init__.py  accounts.py  ads_client.py  audiences.py  bigquery_client.py  campaigns.py  conversion_validator.py  data_generator.py  etl_pipeline.py  ga4_client.py  keywords.py  measurement.py  optimize.py  pmax.py  posthog_client.py  reporting.py  rest_client.py
src/agents/: __init__.py  activations.py  base.py  database.py  decisions.py  ingestors.py  multi_platform_agents.py  runner.py  transforms.py
src/ai_agency/: __init__.py  llm_clients.py
src/api/: __init__.py  admin_routes.py  agent_routes.py  ai_agency_routes.py  app.py  auth_routes.py  auth_simple.py  dashboard_routes.py  debug_routes.py  export_routes.py  linkedin_oauth_routes.py  microsoft_oauth_routes.py  middleware.py  oauth_routes.py  onboarding_routes.py  platform_status_routes.py  reddit_oauth_routes.py
src/auth/: __init__.py  oauth.py  oauth_service.py  security.py  service.py
src/dashboard/: __init__.py  app.py
src/etl/: multi_platform_pipeline.py
src/integrations/: google_ads_real.py  linkedin_ads.py  microsoft_ads.py  reddit_ads.py
src/intelligence/: __init__.py  ad_intelligence.py  data_sources.py  google_ads_intel.py  website_analyzer.py
src/models/: __init__.py  agents.py  auth.py  database.py
templates/: dashboard.html  homepage.html  onboarding.html
tests/: __init__.py  conftest.py  test_ads_client.py
(+10 files in other folders)
